test/semantic_error/se_rd_func.c0
int f(){}

int main() {
    scanf(f);
}
